Interfaz login hecha y de iniciologueado tambien a falta de enlazar y mejorar un poco

--- a/PlayStream/Principal.xaml
+++ b/PlayStream/Principal.xaml
@@ -9,8 +9,8 @@
     <Grid RenderTransformOrigin="0.839,0.502">
         <Label Content="PlayStream" Height="69"  Width="246" HorizontalAlignment="Left"  Foreground="Red" FontWeight="Bold" FontSize="30" Margin="10,16,0,349" />
         <Button x:Name="btnIniciarSesion" Content="Iniciar Sesión" HorizontalAlignment="Left" Margin="592,16,0,0"
-            VerticalAlignment="Top" Width="182" Height="69" Background="White" Foreground="Red" FontWeight="Bold" FontSize="20"/>
+            VerticalAlignment="Top" Width="182" Height="69" Background="White" Foreground="Red" FontWeight="Bold" FontSize="20" Click="btnIniciarSesion_Click"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="677,372,0,0"
-            VerticalAlignment="Top" Width="97" Height="38" Background="Red" Foreground="#FF000033" FontWeight="Bold"/>
+            VerticalAlignment="Top" Width="97" Height="38" Background="Red" Foreground="#FF000033" FontWeight="Bold" Click="btnSalir_Click"/>
     </Grid>
 </Window>
