--- a/PlayStream/InicioAdmin.xaml
+++ b/PlayStream/InicioAdmin.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PlayStream.InicioLogueado"
+﻿<Window x:Class="PlayStream.InicioAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,15 +9,7 @@
     <Grid>
         <Label Content="PlayStream"  Width="168" HorizontalAlignment="Left"  Foreground="Red" FontWeight="Bold" FontSize="30" Margin="10,0,0,334" RenderTransformOrigin="0.532,-0.047" />
 
-        <DockPanel HorizontalAlignment="Stretch">
-            <ToolBar Height="66"  DockPanel.Dock="Top" Margin="200,0,0,0" Width="619">
-                <Button x:Name="btnVolver" Content="Peliculas" Height="61" VerticalAlignment="Top" Width="173"  FontSize="16" FontWeight="Bold" Click="btnPeliculas_Click"/>
-                <Button x:Name="btnPagina1" Content="Series" Height="60" Width="197" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Click="btnPagina1_Click"/>
-                <Button x:Name="btnPerfil" Content="Mi perfil" Height="60" Width="192" Click="BtnPerfil_Click" FontSize="16" FontWeight="Bold" Foreground="Black"/>
 
-            </ToolBar>
-            <Frame x:Name="framePrincipal" Content="Frame"/>
-        </DockPanel>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="677,372,0,0"
             VerticalAlignment="Top" Width="97" Height="38" Background="Red" Foreground="#FF000033" FontWeight="Bold" Click="btnSalir_Click"/>
 
